--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "lucide-react": "^0.535.0",
-    "next": "^15.4.8",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "19.2.1",
+    "react": "^19.2.3",
     "react-dom": "19.2.1"
   },
   "devDependencies": {
@@ -22,7 +22,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "^15.4.8",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
